<resources>
    <string name="app_name">Robot controller</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="Welcome">Robot car controller by Wanchalerm Wanthanang</string>
    <string name="PairBT">Pair new device</string>
    <string name="Manual">Manual driving</string>
    <string name="UP">Go ahead</string>
    <string name="LEFT">Turn left</string>
    <string name="RIGHT">Turn right</string>
    <string name="Mode_O">Mode object evasion</string>
    <string name="Mode_L">Mode line tracking</string>
    <string name="Disconnect">Disconnect</string>
    <string name="Mode_A">Auto driving</string>
    <string name="step5">5 steps</string>
    <string name="step10">10 steps</string>
    <string name="step20">20 steps</string>
    <string name="STOP">Stop</string>
    <string name="CP">Click pair new device to connect your robot</string>
    <string name="DOWN">Reverse</string>
    <string name="MC">Motion control</string>
    <string name="modeZI">Mode move zigzag</string>
    <string name="DM">Distance measurement</string>
    <string name="btnExit">Back</string>
    <string name="movef">Forward</string>
    <string name="mover">Reverse</string>
    <string name="distance">"Distance = "</string>
    <string name="cm">000 cm</string>
    <string name="MoveRec">Movement by record</string>
    <string name="title_activity_move_by_record">Movement by record</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="btnStart">Start</string>
    <string name="wait" />
    <string name="inputnumber">1:Move forward\n2:Reverse\n3:Turn left\n4:Turn right</string>
    <string name="save">Save</string>
    <string name="init_Text">111222</string>
    <string name="title_activity_robot_controller">Robot_Tohng</string>
    <string name="title_activity_distance_measurement">Distance measurement</string>
    <string name="title_activity_manual_movement">Manual movement</string>
    <string name="MN">Manual</string>
    <string name="title_activity_robot_controller2">RC_MK2</string>
</resources>